lab4_update